* v1.2.1:
~~~~~~~~~

* KGySoft.Json namespace:
=========================
* JsonObject class:
  * Security: Using randomized hash calculation even on platforms where this is not the default behavior.
+ JsonValueExtensions class:
  + New TryGetEnum, AsEnum, GetEnumOrDefault overloads.
  + New Get*OrDefault overloads to be able to omit specifying the default value, in which case the default value of
    the requested type is returned as the fallback value.
+ New JsonModule class: To be able to trigger module initialization without calling any specific feature.


~~~~~~~~~
! v1.1.0:
~~~~~~~~~

Note: This JSON library used to be the part of a private repository. Changes are breaking only if migrating from the
private TradeSystem platform, which is not publicly available anyway.

+ Assembly changes:
===================
+ More targeted platforms
* Members are annotated for using C# 8.0 nullable references

! KGySoft.Json namespace:
=========================
! The TradeSystem.Json namespace has been extracted here as a new, standalone public library. The change is breaking
only for the users of the private TradeSystem platform.
+ New JsonEnumFormat enumeration
+ New JsonDateTimeFormat enumeration
+ New JsonTimeSpanFormat enumeration

! JsonValue struct:
===================
! In this new library FromNumberUnchecked and FromLiteralUnchecked are now called CreateNumberUnchecked and
  CreateLiteralUnchecked, respectively.
+ A pair of implicit operators from long/ulong have been added (as obsolete) just to produce a compile time warning
  about possible precision loss when the result JSON is processed by JavaScript. You still can use the ToJson
  extension methods with asString: false parameter to create JSON numbers from long/ulong.
+ New ToString/WriteTo overloads to create indented JSON.
+ New TryParse overloads
- Parse fix: "\/" was not treated as a valid escape sequence. Note: "/" still remains unescaped when writing JSON.

+ JsonArray class:
==================